# wasmi-on-rux

./: .gitmodules  Makefile  README.md
sinits/: Cargo.toml  Makefile
sinits/examples/: wasmi.rs
